--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,6 @@ sqlparse==0.4.1
 urllib3==1.26.2
 django-filter~=2.4.0
 humanize~=3.2.0
+django-debug-toolbar==3.2.0
+django_redis==4.12.1
+redis==3.5.3
